--- a/.gitconfig
+++ b/.gitconfig
@@ -25,6 +25,10 @@
 [init]
   defaultBranch = main
 
+[user]
+  name = nalbam
+  email = me@nalbam.com
+
 [includeIf "gitdir:~/work/src/github.com/daangn/"]
   path = .gitconfig-daangn
 [includeIf "gitdir:~/work/src/github.com/nalbam/"]
