Update Brewfile.darwin: add google-drive and zoom casks, remove dropbox cask

--- a/darwin/Brewfile
+++ b/darwin/Brewfile
@@ -44,9 +44,10 @@ brew "zsh-syntax-highlighting"
 cask "1password"
 cask "aws-vault"
 cask "cursor"
-cask "dropbox"
 cask "google-chrome"
+cask "google-drive"
 cask "iterm2"
 cask "raycast"
 cask "slack"
 cask "visual-studio-code"
+cask "zoom"
