Update Brewfile.darwin: comment out 1password, google-chrome, slack, and zoom casks; add google-drive cask

--- a/darwin/Brewfile
+++ b/darwin/Brewfile
@@ -41,13 +41,14 @@ brew "zsh"
 brew "zsh-autosuggestions"
 brew "zsh-syntax-highlighting"
 
-cask "1password"
+# cask "1password"
+# cask "google-chrome"
+# cask "slack"
+# cask "zoom"
+
+cask "google-drive"
 cask "aws-vault"
 cask "cursor"
-cask "google-chrome"
-cask "google-drive"
 cask "iterm2"
 cask "raycast"
-cask "slack"
 cask "visual-studio-code"
-cask "zoom"
