add cask docker

--- a/darwin/Brewfile
+++ b/darwin/Brewfile
@@ -50,10 +50,11 @@ if ENV['USER'] == "nalbam"
   cask "zoom"
 end
 
-cask "google-drive"
 cask "aws-vault"
 cask "cursor"
+cask "docker"
+cask "font-dejavu-sans-mono-nerd-font"
+cask "google-drive"
 cask "iterm2"
 cask "raycast"
 cask "visual-studio-code"
-cask "font-dejavu-sans-mono-nerd-font"
