--- a/darwin/Brewfile
+++ b/darwin/Brewfile
@@ -42,6 +42,7 @@ brew "xz"
 brew "zsh"
 brew "zsh-autosuggestions"
 brew "zsh-syntax-highlighting"
+brew "1password-cli"
 
 if ENV['USER'] == "nalbam"
   cask "1password"
