Add nvm configuration to .zshrc and update Brewfile to install nvm instead of node

--- a/darwin/Brewfile
+++ b/darwin/Brewfile
@@ -27,9 +27,8 @@ brew "k9s"
 brew "kubernetes-cli"
 brew "kube-ps1"
 brew "kubectx"
-brew "node"
+brew "nvm"
 brew "pipenv"
-brew "pnpm"
 brew "pyenv"
 brew "ruby"
 brew "telnet"
