--- a/linux/Brewfile
+++ b/linux/Brewfile
@@ -24,7 +24,7 @@ brew "k9s"
 brew "kubernetes-cli"
 brew "kube-ps1"
 brew "kubectx"
-brew "node"
+brew "nvm"
 brew "pyenv"
 brew "ruby"
 brew "terraform-docs"
