.gitconfig에 opspresso 경로에 대한 포함 설정을 추가하여 구성 파일을 확장했습니다.

--- a/.gitconfig
+++ b/.gitconfig
@@ -33,3 +33,5 @@
   path = .gitconfig-daangn
 [includeIf "gitdir:~/workspace/github.com/nalbam/"]
   path = .gitconfig-nalbam
+[includeIf "gitdir:~/workspace/github.com/opspresso/"]
+  path = .gitconfig-nalbam
