.gitconfig에 karrot-emu 경로에 대한 포함 설정을 추가하여 구성 파일을 확장했습니다.

--- a/.gitconfig
+++ b/.gitconfig
@@ -31,6 +31,8 @@
 
 [includeIf "gitdir:~/workspace/github.com/daangn/"]
   path = .gitconfig-daangn
+[includeIf "gitdir:~/workspace/github.com/karrot-emu/"]
+  path = .gitconfig-daangn
 [includeIf "gitdir:~/workspace/github.com/nalbam/"]
   path = .gitconfig-nalbam
 [includeIf "gitdir:~/workspace/github.com/opspresso/"]
