.ssh/config에 github.com 및 karrot-emu-github.com에 대한 호스트 설정을 추가하여 SSH 구성 파일을 확장했습니다.

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,2 +1,12 @@
+Host github.com
+  HostName github.com
+  User git
+  IdentityFile ~/.ssh/id_ed25519
+
+Host karrot-emu-github.com
+  HostName github.com
+  User git
+  IdentityFile ~/.ssh/id_rsa
+
 Host *
     StrictHostKeyChecking accept-new
