Brewfile에 opspresso 및 pakerwreah의 cask를 추가하여 새로운 애플리케이션 설치를 지원합니다.

--- a/darwin/Brewfile
+++ b/darwin/Brewfile
@@ -61,3 +61,9 @@ cask "raycast"
 cask "unity-hub"
 cask "visual-studio-code"
 cask "warp"
+
+tap "opspresso/tap"
+cask "opspresso/tap/toast"
+
+tap "pakerwreah/calendr"
+cask "pakerwreah/calendr/calendr"
