Update .ssh/config to rename karrot-emu-github.com to github-emu.com and add new host configuration for github.dev.kr.krpay.io

--- a/.ssh/config
+++ b/.ssh/config
@@ -3,10 +3,15 @@ Host github.com
   User git
   IdentityFile ~/.ssh/id_ed25519
 
-Host karrot-emu-github.com
+Host github-emu.com
   HostName github.com
   User git
-  IdentityFile ~/.ssh/id_rsa
+  IdentityFile ~/.ssh/id_ed25519_kemu
+
+Host github.dev.kr.krpay.io
+  HostName github.dev.kr.krpay.io
+  User git
+  IdentityFile ~/.ssh/id_ed25519_kpay
 
 Host *
     StrictHostKeyChecking accept-new
