.gitconfig에서 daangn 관련 설정을 bruce로 변경하고, .gitconfig-daangn 파일을 삭제했습니다. run.sh에서 bruce 설정을 다운로드하도록 수정했습니다.

--- a/.gitconfig
+++ b/.gitconfig
@@ -29,10 +29,14 @@
   name = nalbam
   email = me@nalbam.com
 
-[includeIf "gitdir:~/workspace/github.com/daangn/"]
-  path = .gitconfig-daangn
+[includeIf "gitdir:~/workspace/github-emu.com/"]
+  path = .gitconfig-bruce
+[includeIf "gitdir:~/workspace/github.dev.kr.krpay.io/"]
+  path = .gitconfig-bruce
 [includeIf "gitdir:~/workspace/github.com/karrot-emu/"]
-  path = .gitconfig-daangn
+  path = .gitconfig-bruce
+[includeIf "gitdir:~/workspace/github.com/daangn/"]
+  path = .gitconfig-bruce
 [includeIf "gitdir:~/workspace/github.com/nalbam/"]
   path = .gitconfig-nalbam
 [includeIf "gitdir:~/workspace/github.com/opspresso/"]
