--- a/.gitignore
+++ b/.gitignore
@@ -24,13 +24,6 @@ $RECYCLE.BIN/
 __pycache__
 .pytest_cache
 
-# Terraform
-.terraform/
-.terraform.tfstate.lock.info
-terraform.tfstate.backup
-terraform.tfstate
-terraform.tfplan
-
 # maven
 build/
 builds/
@@ -44,3 +37,13 @@ target/
 # JetBrains
 .idea/
 *.iml
+
+# backup files
+*.bak
+*.backup
+
+# prompt
+.prompt-*.md
+.prompt.md
+prompt-*.md
+prompt.md
