--- a/tmux.conf
+++ b/tmux.conf
@@ -30,10 +30,10 @@ set -sg escape-time 0
 # Status bar configuration
 set -g status-position bottom
 set -g status-style 'bg=colour234 fg=colour137'
-set -g status-left ''
+set -g status-left '#[fg=colour232,bg=colour154,bold] #S #[fg=colour154,bg=colour238] #[fg=colour250,bg=colour238] #h '
 set -g status-right '#[fg=colour233,bg=colour241] %Y-%m-%d #[fg=colour233,bg=colour245] %H:%M:%S '
 set -g status-right-length 50
-set -g status-left-length 20
+set -g status-left-length 40
 
 # Window status
 setw -g window-status-current-style 'fg=colour1 bg=colour238 bold'
