feat: Revamp tmux status bar with enhanced session, host, and system information display

--- a/tmux.conf
+++ b/tmux.conf
@@ -29,11 +29,17 @@ set -sg escape-time 0
 
 # Status bar configuration
 set -g status-position bottom
-set -g status-style 'bg=colour234 fg=colour137'
-set -g status-left '#[fg=colour232,bg=colour154,bold] #S #[fg=colour154,bg=colour238] #[fg=colour250,bg=colour238] #h '
-set -g status-right '#[fg=colour233,bg=colour241] %Y-%m-%d #[fg=colour233,bg=colour245] %H:%M:%S '
-set -g status-right-length 50
-set -g status-left-length 40
+set -g status-style 'bg=colour235 fg=colour223'
+set -g status-justify left
+set -g status-interval 2
+
+# Left status bar - Session, Host, Path
+set -g status-left-length 100
+set -g status-left '#[fg=colour232,bg=colour154,bold] 📦 #S #[fg=colour154,bg=colour238,nobold] #[fg=colour250,bg=colour238] 💻 #h #[fg=colour238,bg=colour235] #[fg=colour246,bg=colour235] 📁 #{b:pane_current_path} '
+
+# Right status bar - CPU, Memory, Network, Date, Time
+set -g status-right-length 150
+set -g status-right '#[fg=colour239,bg=colour235]#[fg=colour246,bg=colour239] 🔋 #(cat /proc/loadavg | cut -d" " -f1,2,3) #[fg=colour241,bg=colour239]#[fg=colour250,bg=colour241] 🧠 #(free -h | awk "/^Mem:/ {print \$3\"/\"\$2}") #[fg=colour243,bg=colour241]#[fg=colour253,bg=colour243] 🌐 #(hostname -I | cut -d" " -f1) #[fg=colour245,bg=colour243]#[fg=colour232,bg=colour245] 📅 %Y-%m-%d #[fg=colour154,bg=colour245]#[fg=colour232,bg=colour154,bold] 🕐 %H:%M:%S '
 
 # Window status
 setw -g window-status-current-style 'fg=colour1 bg=colour238 bold'
