feat: Update tmux status bar to use lightning bolt icon for system metrics

--- a/tmux.conf
+++ b/tmux.conf
@@ -42,11 +42,11 @@ set -g status-right-length 150
 
 # macOS-specific status bar
 if-shell 'test "$(uname)" = "Darwin"' \
-  'set -g status-right "#[fg=colour239,bg=colour235]#[fg=colour246,bg=colour239] 🔋 #(sysctl -n vm.loadavg | awk \"{print \\$2, \\$3, \\$4}\") #[fg=colour241,bg=colour239]#[fg=colour250,bg=colour241] 🧠 #(top -l 1 | grep PhysMem | awk \"{print \\$2}\") #[fg=colour243,bg=colour241]#[fg=colour253,bg=colour243] 🔌 #(pmset -g batt | grep -Eo \"[0-9]+%\" | head -1) #[fg=colour245,bg=colour243]#[fg=colour250,bg=colour245] 🌐 #(ifconfig | grep \"inet \" | grep -v 127.0.0.1 | awk \"{print \\$2}\" | head -1) #[fg=colour247,bg=colour245]#[fg=colour232,bg=colour247] 📅 %Y-%m-%d #[fg=colour154,bg=colour247]#[fg=colour232,bg=colour154,bold] 🕐 %H:%M:%S "'
+  'set -g status-right "#[fg=colour239,bg=colour235]#[fg=colour246,bg=colour239] ⚡ #(sysctl -n vm.loadavg | awk \"{print \\$2, \\$3, \\$4}\") #[fg=colour241,bg=colour239]#[fg=colour250,bg=colour241] 🧠 #(top -l 1 | grep PhysMem | awk \"{print \\$2}\") #[fg=colour243,bg=colour241]#[fg=colour253,bg=colour243] 🔋 #(pmset -g batt | grep -Eo \"[0-9]+%\" | head -1) #[fg=colour245,bg=colour243]#[fg=colour250,bg=colour245] 🌐 #(ifconfig | grep \"inet \" | grep -v 127.0.0.1 | awk \"{print \\$2}\" | head -1) #[fg=colour247,bg=colour245]#[fg=colour232,bg=colour247] 📅 %Y-%m-%d #[fg=colour154,bg=colour247]#[fg=colour232,bg=colour154,bold] 🕐 %H:%M:%S "'
 
 # Linux-specific status bar
 if-shell 'test "$(uname)" = "Linux"' \
-  'set -g status-right "#[fg=colour239,bg=colour235]#[fg=colour246,bg=colour239] 🔋 #(cat /proc/loadavg | cut -d\" \" -f1,2,3) #[fg=colour241,bg=colour239]#[fg=colour250,bg=colour241] 🧠 #(free -h | awk \"/^Mem:/ {print \\$3\\\"/\\\"\\$2}\") #[fg=colour243,bg=colour241]#[fg=colour253,bg=colour243] 🌐 #(hostname -I | cut -d\" \" -f1) #[fg=colour245,bg=colour243]#[fg=colour232,bg=colour245] 📅 %Y-%m-%d #[fg=colour154,bg=colour245]#[fg=colour232,bg=colour154,bold] 🕐 %H:%M:%S "'
+  'set -g status-right "#[fg=colour239,bg=colour235]#[fg=colour246,bg=colour239] ⚡ #(cat /proc/loadavg | cut -d\" \" -f1,2,3) #[fg=colour241,bg=colour239]#[fg=colour250,bg=colour241] 🧠 #(free -h | awk \"/^Mem:/ {print \\$3\\\"/\\\"\\$2}\") #[fg=colour243,bg=colour241]#[fg=colour253,bg=colour243] 🌐 #(hostname -I | cut -d\" \" -f1) #[fg=colour245,bg=colour243]#[fg=colour232,bg=colour245] 📅 %Y-%m-%d #[fg=colour154,bg=colour245]#[fg=colour232,bg=colour154,bold] 🕐 %H:%M:%S "'
 
 # Window status
 setw -g window-status-current-style 'fg=colour1 bg=colour238 bold'
