feat: Add mouse selection copy to clipboard in tmux
- Enable vi mode for copy mode navigation
- Add clipboard integration with set-clipboard option
- Add vi-style key bindings (v, y, C-v) for copy mode
- Support mouse drag selection copying to system clipboard
- Platform-specific clipboard commands (pbcopy for macOS, xclip for Linux)

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,12 @@
 # Enable mouse support
 set -g mouse on
 
+# Use vi mode for copy mode
+setw -g mode-keys vi
+
+# Enable clipboard integration
+set -g set-clipboard on
+
 # Set default terminal
 set -g default-terminal "screen-256color"
 
@@ -79,3 +85,17 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
+# Copy mode vi-style key bindings
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send -X copy-selection-and-cancel
+bind -T copy-mode-vi C-v send -X rectangle-toggle
+
+# Mouse selection copies to system clipboard
+# macOS
+if-shell 'test "$(uname)" = "Darwin"' \
+  'bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"'
+
+# Linux
+if-shell 'test "$(uname)" = "Linux"' \
+  'bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "xclip -selection clipboard -i"'
